# snake-ai-v2

./: .vcpkg-deps  CMakeLists.txt  Cargo.toml  README.md
src/: cell.rs  genetic.rs  main.rs  snake.rs
src/genetic/: algorithms.rs  genome.rs  organism.rs  population.rs  traits.rs
src/snake/: cell.rs  direction.rs  point.rs
src/snake/cell/: point.rs
