[package]
name = "snake-ai-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
crossterm = "*"
colored = "*"
drawille = "*"
console_engine = "*"
lazy_static = "*"
dfdx = "*"
rand_distr = "*"